# Drupal-Activity-Summary

./: 1d-data.md  1d-summary-ceo.md  1d-summary-dev.md  1d-summary-executive.md  24h_2026-04-23-data.md  README.md  _coverpage.md  _sidebar.md  analysis.css  analysis.html  analysis.js  ceo.md  data.md  index.html  install.md  latest.json  prompts.md
.github/workflows/: issue-analysis.yml
docs/: dev.md
issue_analysis/: README.md  issue_analysis.info.yml  issue_analysis.links.menu.yml  issue_analysis.permissions.yml  issue_analysis.routing.yml  issue_analysis.services.yml  module-architecture.md
issue_analysis/src/Controller/: DailyDigestCronController.php
issue_analysis/src/Drush/Commands/: IssueAnalysisCommands.php  NewsletterCommands.php
issue_analysis/src/Form/: DailyDigestForm.php
issue_analysis/src/Plugin/QueueWorker/: DailyDigestWorker.php
issue_analysis/src/Service/: AiSummariserService.php  DailyDigestService.php  IssueAnalysisService.php  NewsletterDataFetcherService.php
issue_analysis_tool/: README.md  modules.yml  pyproject.toml
issue_analysis_tool/src/issue_analysis_tool/: __init__.py  cli.py  config.py  digest.py  fetchers.py  llm.py  models.py  render.py  writer.py
issue_analysis_tool/tests/: test_fetchers.py  test_render.py  test_writer.py
